minor improvement for tables

--- a/l2.htm
+++ b/l2.htm
@@ -13,18 +13,22 @@
     .then((json) => traitementJson(json,"compyearcontent","Matièrescomp"));
 </script>
 <table id="mathyearcontent" class="summaryTable" border="1" cellspacing="0">
+    <caption>Mathematiques</caption> 
     <tr id="Matièresmaths">
     </tr>
 </table>
 <table id="infoyearcontent" class="summaryTable" border="1" cellspacing="0">
+    <caption>Informatique</caption>
     <tr id="Matièresinfo">
     </tr>
 </table>
 <table id="transyearcontent" class="summaryTable" border="1" cellspacing="0">
+    <caption>Bloc transverse</caption>
     <tr id="Matièrestrans">
     </tr>
 </table>
 <table id="compyearcontent" class="summaryTable" border="1" cellspacing="0">
+    <caption>Bloc complémentaire</caption>
     <tr id="Matièrescomp">
     </tr>
 </table>
