minor improvement for tables

--- a/l2.htm
+++ b/l2.htm
@@ -1,33 +1,33 @@
 <script type="text/javascript">
     fetch('json/mathsL2.json')
     .then((response) => response.json())
-    .then((json) => traitementJson(json,"mathyearcontent","Matièresmaths"));
+    .then((json) => traitementJson(json,"mathyearcontent2","Matièresmaths"));
     fetch('json/infoL2.json')
     .then((response) => response.json())
-    .then((json) => traitementJson(json,"infoyearcontent","Matièresinfo"));
+    .then((json) => traitementJson(json,"infoyearcontent2","Matièresinfo"));
     fetch('json/transL2.json')
     .then((response) => response.json())
-    .then((json) => traitementJson(json,"transyearcontent","Matièrestrans"));
+    .then((json) => traitementJson(json,"transyearcontent2","Matièrestrans"));
     fetch('json/compL2.json')
     .then((response) => response.json())
-    .then((json) => traitementJson(json,"compyearcontent","Matièrescomp"));
+    .then((json) => traitementJson(json,"compyearcontent2","Matièrescomp"));
 </script>
-<table id="mathyearcontent" class="summaryTable" border="1" cellspacing="0">
+<table id="mathyearcontent2" class="summaryTable" border="1" cellspacing="0">
     <caption>Mathematiques</caption> 
     <tr id="Matièresmaths">
     </tr>
 </table>
-<table id="infoyearcontent" class="summaryTable" border="1" cellspacing="0">
+<table id="infoyearcontent2" class="summaryTable" border="1" cellspacing="0">
     <caption>Informatique</caption>
     <tr id="Matièresinfo">
     </tr>
 </table>
-<table id="transyearcontent" class="summaryTable" border="1" cellspacing="0">
+<table id="transyearcontent2" class="summaryTable" border="1" cellspacing="0">
     <caption>Bloc transverse</caption>
     <tr id="Matièrestrans">
     </tr>
 </table>
-<table id="compyearcontent" class="summaryTable" border="1" cellspacing="0">
+<table id="compyearcontent2" class="summaryTable" border="1" cellspacing="0">
     <caption>Bloc complémentaire</caption>
     <tr id="Matièrescomp">
     </tr>
