no bug in projects, fake get actions to do

--- a/index.htm
+++ b/index.htm
@@ -17,5 +17,6 @@
     </footer>
     <script src="script/noRefreshLinks.js"></script>
     <script src="script/include.js"></script>
+    <script src="script/projetJSDECLARATIONS.js"></script>
 </body>
 </html>
