--- a/projets.html
+++ b/projets.html
@@ -13,7 +13,7 @@
         </div>
         <template id="card-template">
             <div class="card">
-                <header id="name" class="name"></header>
+                <a id="link" href="#"><header id="name" class="name"></header></a>
                 <p id="date"></p>
                 <p id="projtext"></p>
             </div>
@@ -21,40 +21,5 @@
     </div>
 </div>
 <script>
-    //trouve un moyen d'executer les fonctions 1 fois mais de faire fonctionner ce bordel à chaque chargement de page
-    // -> declarer ailleurs, modifier ici et executer à chaque fois
-    function date_to_String(date){
-        return String(date.day) + "/" + String(date.month) + "/" + String(date.year);
-    }
-    const projetCardTemplate = document.getElementById("card-template");
-    let details = [];
-    const getprojets = async () => {
-        const res = await fetch("json/projets.json");
-        const projets = await res.json();
-        details = projets.map((projet, i) => {
-            const card = projetCardTemplate.content.cloneNode(true);
-            card.getElementById("name").innerText = projet.name;
-            card.getElementById("date").innerText = date_to_String(projet.date);
-            card.getElementById("projtext").innerText = projet.text.substring(0, 50) + "...";
-            document.getElementById("cards-wrapper").append(card);
-            return {
-                name: projet.name.toLowerCase(),
-                text: projet.text.toLowerCase(),
-                ele: document.querySelectorAll(".card")[i]
-            };
-        });
-    };
-
-    getprojets();
-
-    const input = document.getElementById("search");
-
-    input.addEventListener("input", (e) => {
-        let query = e.target.value.toLowerCase();
-        details.forEach((projet) => {
-            const isVisible = projet.name.includes(query) || projet.text.includes(query);
-            projet.ele.classList.toggle("hide", !isVisible);
-        });
-    });
-
+    projetLoadingRoutine();
 </script>
